--- a/app/src/main/res/layout/apiary_row_item.xml
+++ b/app/src/main/res/layout/apiary_row_item.xml
@@ -1,88 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_anchorGravity="end">
+    android:layout_height="100dp"
+    android:orientation="horizontal">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/apiaryImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/picture"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/ic_menu_gallery" />
 
-        <ImageView
-            android:id="@+id/apiaryImage"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/picture"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_menu_gallery" />
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@id/apiaryName"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_span="2"
-                    android:layout_weight="1"
-                    android:hint="@string/apiaryName"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    android:textColorHint="#78909C"
-                    android:textSize="40sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/apiaryLocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/apiary_location"
-                    android:padding="5dp"
-                    android:textColorHint="#78909C"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/lblHiveCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="@string/hives_count"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/hiveCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="@string/_0"
-                    android:padding="5dp"
-                    android:textColorHint="#78909C"
-                    android:textSize="20sp" />
-            </TableRow>
-        </TableLayout>
-
-        <ImageButton
-            android:id="@+id/action_delete"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/action_delete"
-            android:minHeight="48dp"
-            android:scaleType="fitEnd"
-            app:srcCompat="@android:drawable/ic_delete" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</FrameLayout>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@id/apiaryName"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:layout_weight="1"
+                android:hint="@string/apiaryName"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:textColorHint="#78909C"
+                android:textSize="40sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/apiaryLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/apiary_location"
+                android:padding="5dp"
+                android:textColorHint="#78909C"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/lblHiveCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="@string/hives_count"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/hiveCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/_0"
+                android:padding="5dp"
+                android:textColorHint="#78909C"
+                android:textSize="20sp" />
+        </TableRow>
+    </TableLayout>
+
+    <ImageButton
+        android:id="@+id/action_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/action_delete"
+        android:minHeight="48dp"
+        android:scaleType="fitEnd"
+        app:srcCompat="@android:drawable/ic_delete" />
+</androidx.appcompat.widget.LinearLayoutCompat>
