--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,12 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/apiary"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_today"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
+        <item
+            android:id="@+id/nav_find_hive"
+            android:icon="@android:drawable/ic_menu_search"
+            android:title="@string/find_hive" />
         <item
             android:id="@+id/logout"
             android:icon="@android:drawable/ic_lock_lock"
